--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "babel-plugin-react-compiler": "^19.0.0-beta-b2e8e9c-20241220",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
