--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-use-measure": "^2.1.1",
+    "react-image-crop": "^11.0.7",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1",
+    "immer": "^10.1.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
